Sat Mar  5 22:54:36 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* include/ruby/intern.h: fix a typo of prototype declaration.
	  rb_mutex_try_lock -> rb_mutex_trylock [ruby-dev:43213]

Thu Mar  3 21:21:42 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_process.rb (test_execopts_redirect): redirecting fd
	  >= 3 is not supported on Windows, so should not specify such options
	  when calling spawn or others.

Sat May 14 12:20:22 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* strftime.c (STRFTIME):  return 0 and ERANGE when precision is too
	  large. [ruby-dev:43284] fixes #4456
	  based on r31011.

	* test/test_time.rb (TestTime#test_huge_precision): test for #4456.

Sat Feb 26 07:10:05 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: fix parsing timezone's whose
	  whose format is (+/-)hhmm.  Thanks Gonçalo Silva!

	* test/psych/test_scalar_scanner.rb: test for bug.

Mon Feb 28 13:02:15 2011  Danial Pearce <github@tigris.id.au>

	* lib/tempfile.rb: Fix example file paths in docs for tempfile.
	  https://github.com/ruby/ruby/pull/5

Mon Feb 21 10:54:29 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/json/stream.rb: do not emit custom tags in maps
	  or sequences when emitting JSON.
	* ext/psych/lib/psych/json/tree_builder.rb: do not emit custom tags in
	  sequences when emitting JSON.
	* test/psych/json/test_stream.rb: tests for custom stream emits.
	* test/psych/test_json_tree.rb: tests for JSON emits.

Sun Feb 20 16:26:45 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (exec_recursive): prevent temporary objects from GC.

	* prevent temporary objects from GC, and should not use
	  RSTRING_PTR() for function calls since it evaluates the argument
	  a couple of times.

Sun Feb 20 02:14:09 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (sig_trap): avoid pthread_sigmask(xx, &mask, &mask) usage