@@ -71,4 +71,33 @@ class PStoreTest < Test::Unit::TestCase
       end
     end
   end
+
+  def test_thread_safe
+    assert_raise(PStore::Error) do
+      flag = false
+      Thread.new do
+        @pstore.transaction do
+          @pstore[:foo] = "bar"
+          flag = true
+          sleep 1
+        end
+      end
+      until flag; end
+      @pstore.transaction {}
+    end
+    assert_block do
+      pstore = PStore.new("pstore.tmp2.#{Process.pid}",true)
+      flag = false
+      Thread.new do
+        pstore.transaction do
+          pstore[:foo] = "bar"
+          flag = true
+          sleep 1
+        end
+      end
+      until flag; end
+      pstore.transaction { pstore[:foo] == "bar" }
+      File.unlink("pstore.tmp2.#{Process.pid}") rescue nil
+    end
+  end
 end
